src/test/deca/context/invalid/overrideIncompatible2.deca
class Animal {
    protected float poids;
    protected int nbPates;

    void faireCrier() {
        println("Grrrrrrrrrr");
    }

    float nourrir(float poidsNourriture) {
        poids = poids + poidsNourriture;
        return poids;
    }
}

class Lion extends Animal {

    void initParam(float newPoids, int NewNbPates) {
        poids = newPoids;
        nbPates = NewNbPates;
    }

    int faireCrier() {
        println("RRRrrhhhhhh");
        return 1;
    }
}

{
    Animal lion = new Lion();
    println("Un lion a été créé.");
}